fixed spacing and alignments

--- a/style.css
+++ b/style.css
@@ -11,16 +11,18 @@ body {
   font-weight: bold;
 }
 
+.leftNav {
+  width: 50%;
+}
+
 .leftNav img {
   padding-top: 0.5em;
   padding-left: 10em;
   height: 5em;
-  width: 50%;
   margin-left: -5em;
 }
 
 .rightNav {
-  align-self: flex-end;
   width: 50%;
   padding-bottom: 2.5em;
   margin-right: 15em;
@@ -30,7 +32,6 @@ body {
 li {
   list-style: none;
   display: inline;
-  text-align: right;
   padding: 1em;
   font-size: 20;
 }
@@ -53,19 +54,16 @@ a {
   display: flex;
   width: 100%;
   flex-direction: row;
+  height: auto;
 }
 
 .hire {
-  width: 850px;
-  height: 612px;
-  align-self: flex-start;
-  margin-left: -5em;
+  width: 50%;
+  height: auto;
 }
 
 .hero-right {
-  padding: -20em;
-  margin-top: -3em;
-  align-items: baseline;
+  width: 50%;
 }
 
 .hero-right img {
@@ -79,8 +77,6 @@ a {
 .hero-right h2 {
   font-size: 70px;
   font-weight: 400;
-  margin-right: 2em;
-  width: 200px;
   margin-left: 3.14em;
 }
 
@@ -92,30 +88,30 @@ a {
 }
 
 .hero-right p {
-  font-size: 25px;
+  font-size: 20px;
   border: 3px solid black;
   text-align: center;
   width: 10em;
-  padding: 0em;
+  padding: 8px 10px;
   border-radius: 5px;
   background-color: black;
   color: white;
-  margin-left: 8em;
+  margin-left: 10.5em;
 }
 
-.hero-bottom {
-  width: 180px;
-  align-self: flex-end;
-  height: 100px;
-  margin: 5em;
+.social {
+  margin: 30px 0 0 390px;
 }
 
-.hero-bottom img {
-  width: 30px;
-  height: 30px;
-  padding-top: 8.5em;
+.social img {
+  height: 25px;
+  width: 25px;
   margin: 0;
-  padding: 8.5em 5px 0 5px;
+}
+
+.social a {
+  margin-top: auto;
+  padding: 0 5px;
 }
 
 .readMore {
@@ -126,34 +122,29 @@ a {
 }
 .leftLogo {
   width: 50%;
-}
-
-.leftLogo img {
-  height: 900px;
-  width: 450px;
-  padding-right: 2em;
+  margin-top: 150px;
 }
 
 .rightInformation {
   width: 50%;
-  padding-bottom: 10em;
-  position: absolute;
-  right: 5em;
-  top: 550px;
+}
+
+.leftLogo img {
+  height: 500px;
+  width: 450px;
 }
 
 .rightInformation h1 {
   font-size: 4em;
   font-weight: 400;
-  margin-top: 7em;
-  margin-bottom: -3px;
+  margin-top: 200px;
+  margin-right: 200px;
 }
 
 .rightInformation p {
   font-size: 28px;
   width: 19em;
   font-weight: bold;
-  padding-left: 3.5em;
   letter-spacing: 0.1px;
 }
 
@@ -165,5 +156,5 @@ a {
   padding: 5px 65px;
   box-sizing: border-box;
   font-size: 20px;
-  margin-left: -10px;
+  margin-right: 210px;
 }
